intermediate calculators results added